// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxCloseButton customize 1`] = `
<div>
  <button
    aria-label="Close"
    class="close-button white bazinga"
    disabled=""
  >
    Test
  </button>
</div>
`;

exports[`loads and displays CxCloseButton component 1`] = `
<div>
  <button
    aria-label="Close"
    class="close-button"
  >
    Test
  </button>
</div>
`;
